# dotwave

./: .gitignore  DOCKET.md  README.md  claude.local.md  flutter_rust_bridge.yaml  pubspec.yaml
.claude/: settings.json
android/app/: build.gradle.kts
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/zkpki/: mime_wrap.wasm
android/app/src/main/kotlin/com/dotwave/dotwave/: MainActivity.kt  MimeWrapAssets.kt  PcHmacSmokeTest.kt  StrongBoxManager.kt  ZkPkiCeremony.kt
android/app/src/main/res/values-night-v31/: styles.xml
android/app/src/main/res/values-v31/: styles.xml
docs/: CHAT-GUARD-DISCOVERY.md  DOTWAVE-MEMBERSHIP-AUTH-CLIENT-PLAN.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Base.lproj/: LaunchScreen.storyboard
lib/: backup_provider_screen.dart  cloud_backup.dart  home_shell.dart  keystore.dart  main.dart  restore_provider_screen.dart  theme.dart
lib/bridge/bridge_generated.dart/: chat.dart  chat_dr.dart  chat_session.dart  core.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  membership.dart  mime_wrap_client.dart  mime_wrap_prover.dart  personhood.dart  totp_enrollment.dart  zkpki_certs.dart
lib/config/: rpc_endpoints.dart
lib/models/: feed_item.dart
lib/providers/: google_drive_provider.dart  local_backup_provider.dart  onedrive_provider.dart  webdav_provider.dart
lib/screens/: about_screen.dart  avatar_screen.dart  callsigns_screen.dart  cert_detail_screen.dart  change_identity_screen.dart  chat_keys_screen.dart  chat_thread_screen.dart  dead_drops_screen.dart  explore_tab.dart  governance_screen.dart  home_tab.dart  manage_name_screen.dart  message_options_screen.dart  messages_tab.dart  my_certs_screen.dart  name_registration_screen.dart  profile_tab.dart  receive_screen.dart  referendum_detail_screen.dart  seed_phrase_quiz_screen.dart  send_screen.dart  settings_screen.dart  tokens_screen.dart  totp_enrollment_screen.dart  zkpki_screen.dart  zkpki_spoof_defense_test_screen.dart
lib/screens/games/: bricks_screen.dart  game_2048_screen.dart  game_scores.dart  games_screen.dart  mines_screen.dart  snake_screen.dart
lib/services/: avatar_service.dart  chat_store.dart  content_key_service.dart  dead_drop_service.dart  feed_service.dart  guard_discovery_service.dart  membership_enrollment_service.dart  membership_session_service.dart  signing_service.dart  text_scale_controller.dart  theme_controller.dart  totp_enrollment_service.dart  transaction_tracker.dart  tx_actions.dart  zkpki_ceremony_service.dart  zkpki_mint_service.dart
lib/utils/: block_time.dart
lib/widgets/: chat_avatar.dart  feed_card.dart  pinch_text_zoom.dart  rostro_confirm_dialog.dart  transaction_blade.dart  tunnel_loading.dart  tx_badge_overlay.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust_core/: Cargo.toml
rust_core/.cargo/: config.toml
rust_core/src/: chat.rs  chat_dr.rs  chat_session.rs  core.rs  dead_drop.rs  frb_generated.rs  lib.rs  membership.rs  mime_wrap_client.rs  mime_wrap_prover.rs  paseo_config.rs  personhood.rs  polkadot_metadata.scale  rostro_client.rs  rostro_config.rs  totp_enrollment.rs  zkpki_certs.rs
rust_core/tests/: chat_auth.rs  chat_dr_e2e.rs  chat_onion_e2e.rs  chat_roundtrip.rs  rns_genesis.rs  rostro_smoke.rs
test/: chat_ordering_test.dart  games_smoke_test.dart  widget_test.dart
tool/: brand_assets.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
