[package]
name = "rust_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
base32 = "0.5.1"
bip39 = "2.2.2"
chacha20poly1305 = "0.10.1"
flutter_rust_bridge = "=2.11.1"
getrandom = "0.4.2"
libc = "0.2.183"
rand = "0.10.0"
rand_core = "0.10.0"
ring = "0.17.14"
sp-core = { version = "39.0.0", features = ["full_crypto"] }
subxt = { version = "0.50", default-features = false, features = ["jsonrpsee", "native", "runtime"] }
# Direct dep on scale-info so `rostro_config.rs` can name `PortableRegistry`
# without going through subxt's transitive re-export (subxt 0.50 doesn't
# expose it under `subxt::ext`).
scale-info = { version = "2.11", default-features = false }
# All Rostro chat + client crates are path-depped from rostro-main
# checkout (/home/coder/Rostro; pq-chat merged 882dbee6e7, hybrid sealed sender + PQXDH) — one
# copy each, so their shared internal
# deps (e.g. rostro-chat-primitives) resolve to a single version, no
# two-versions-of-a-crate type mismatches. The dead-drop engine (the
# OnionDeliverPayload.pickup_key wire cutover) is merged into rostro-main.
rostro-client = { path = "/home/coder/Rostro/substrate/utils/rostro-client" }
rostro-chat-primitives = { path = "/home/coder/Rostro/substrate/utils/rostro-chat-primitives" }
rostro-chat-sealed-sender = { path = "/home/coder/Rostro/substrate/utils/rostro-chat-sealed-sender" }
# Phase 3: inner content sealed to the recipient's silicon content key
# (P-256 StrongBox / P-384 TPM; software stand-in on the dev box).
rostro-chat-content-seal = { path = "/home/coder/Rostro/substrate/utils/rostro-chat-content-seal" }
# Phase 5: Double Ratchet + full X3DH for forward-secret 1:1.
rostro-chat-dr = { path = "/home/coder/Rostro/substrate/utils/rostro-chat-dr" }
# PQ: ML-KEM-768 keypair derivation for the SEAL (hybrid sealed-sender) and
# PQSPK (PQXDH) keys; same vendored crate the chat crates use internally.
rostro-hybrid-kex = { path = "/home/coder/Rostro/substrate/utils/rostro-hybrid-kex" }
x25519-dalek = { version = "2", features = ["static_secrets"] }
# Phase 4: one-hop onion (network-origin anonymity) + node identity.
rostro-chat-onion = { path = "/home/coder/Rostro/substrate/utils/rostro-chat-onion" }
rostro-node-identity = { path = "/home/coder/Rostro/substrate/utils/rostro-node-identity" }
# Matched to the Rostro workspace so the chat-crate types unify.
ed25519-zebra = "4.0.3"
# Phase 2 chat-auth: software P-256 ECDSA stand-in for the StrongBox/TPM
# cert key on the dev box. Same crate + version the node's
# `DevicePublicKey::verify_signature` uses, so sign/verify stay symmetric.
p256 = { version = "0.13", features = ["ecdsa", "arithmetic", "hash2curve"] }
hex = "0.4.3"
serde = { version = "1.0.214", features = ["derive"] }
# rand_core 0.6 ALIAS — the chat crates bind `R: rand_core 0.6
# RngCore + CryptoRng`; rust_core's other code is on rand_core 0.10
# (incompatible major). The chat layer uses this 0.6 OsRng only.
rand_core_06 = { package = "rand_core", version = "0.6.2", features = ["getrandom"] }
scale-value = "0.18.2"
frame-metadata = { version = "23.0.1", features = ["current"] }
parity-scale-codec = { version = "3.7.5", features = ["derive"] }
tokio = { version = "1.50.0", features = ["rt", "macros"] }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
zxcvbn = "3.1.0"

# Stage 2 PoC: on-device Groth16 proving via ark-circom. Not production —
# real rapidsnark (C++ FFI) is the production path if this benchmark
# confirms the approach is viable but needs more speed. ark-circom
# pulls ark-groth16, ark-bn254, ark-std, and wasmer (for Circom
# wasm witness generation) transitively. Adds non-trivial binary
# size to librust_core.so — acceptable for the PoC debug build.
ark-circom = "0.5"
ark-bn254 = { version = "0.5", default-features = false }
ark-groth16 = { version = "0.5", default-features = false }
ark-snark = { version = "0.5", default-features = false }
ark-std = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
sha2 = "0.10"

# Chat anonymous-membership prover (the `membership_prover` bin). Path-depped
# from the rostro-main checkout so the circuit / Poseidon / tree definitions are
# the single source of truth shared with the node's verifier — no Circom
# re-implementation to drift. The groth16 feature pulls the BN254 proving
# machinery; the chat-membership-auth crate supplies the exact challenge /
# session-commit derivations the guard reconstructs.
rostro-poseidon-bn254 = { path = "/home/coder/Rostro/substrate/utils/rostro-poseidon-bn254" }
rostro-membership-tree = { path = "/home/coder/Rostro/substrate/utils/rostro-membership-tree" }
rostro-membership-circuit = { path = "/home/coder/Rostro/substrate/utils/rostro-membership-circuit", features = ["groth16"] }
rostro-chat-membership-auth = { path = "/home/coder/Rostro/substrate/utils/rostro-chat-membership-auth" }
serde_json = "1"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
